add jumbotron to survey. change bootstrap jumbo, add my own for jumbotron.

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -4955,13 +4955,12 @@ a.badge:focus {
 .nav-pills > li > a > .badge {
   margin-left: 3px;
 }
-.jumbotron {
+/* .jumbotron {
   padding-top: 30px;
   padding-bottom: 30px;
   margin-bottom: 30px;
-  color: inherit;
-  background-color: #eee;
-}
+  color: black;
+} */
 .jumbotron h1,
 .jumbotron .h1 {
   color: inherit;
