finish all experience responses

--- a/css/styles.css
+++ b/css/styles.css
@@ -14,3 +14,15 @@
   display: none;
   text-align: center;
 }
+#littleExperience {
+  display: none;
+  text-align: center;
+}
+#intermediateExperience {
+  display: none;
+  text-align: center;
+}
+#advanceExperience {
+  display: none;
+  text-align: center;
+}
